kubernetes/postgres/components/pg_admin/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
  namespace: postgres
  labels:
    app.kubernetes.io/instance: pgadmin
  annotations:
    externaldns.k8s.io: unifi
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https-gateway
      namespace: openshift-ingress

    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: listeners
      namespace: openshift-ingress
  hostnames: ["pgadmin.okd.homelab.arthurvardevanyan.com"]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: pgadmin
          namespace: postgres
          port: 5050
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
