kubernetes/postgres/components/pg_admin/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: grafana
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/pgadmin: pgadmin
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: openshift-ingress
          podSelector:
            matchLabels:
              gateway.networking.k8s.io/gateway-name: https-gateway
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-grafana-egress
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/pgadmin: pgadmin
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: grafana
          podSelector:
            matchLabels:
              cnpg.io/cluster: grafana
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-immich-egress
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/pgadmin: pgadmin
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: immich
          podSelector:
            matchLabels:
              cnpg.io/cluster: immich
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-gitea-egress
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/pgadmin: pgadmin
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gitea
          podSelector:
            matchLabels:
              cnpg.io/cluster: gitea
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-homeassistant-egress
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/pgadmin: pgadmin
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: homeassistant
          podSelector:
            matchLabels:
              cnpg.io/cluster: homeassistant
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-nextcloud-egress
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/pgadmin: pgadmin
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nextcloud-fpm
          podSelector:
            matchLabels:
              cnpg.io/cluster: nextcloud
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-quay-egress
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/pgadmin: pgadmin
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: quay
          podSelector:
            matchLabels:
              cnpg.io/cluster: quay
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-clair-egress
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/pgadmin: pgadmin
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: quay
          podSelector:
            matchLabels:
              cnpg.io/cluster: clair
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-stackrox-egress
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/pgadmin: pgadmin
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: stackrox
          podSelector:
            matchLabels:
              cnpg.io/cluster: stackrox
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-netbox-egress
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/pgadmin: pgadmin
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: netbox
          podSelector:
            matchLabels:
              cnpg.io/cluster: netbox
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-awx-egress
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/pgadmin: pgadmin
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: awx
          podSelector:
            matchLabels:
              cnpg.io/cluster: awx
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-zitadel-egress
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/pgadmin: pgadmin
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: zitadel
          podSelector:
            matchLabels:
              cnpg.io/cluster: zitadel
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-spotify-egress
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/pgadmin: pgadmin
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: analytics-for-spotify
          podSelector:
            matchLabels:
              cnpg.io/cluster: spotify
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: analytics-for-spotify-ext
          podSelector:
            matchLabels:
              cnpg.io/cluster: spotify
      ports:
        - protocol: TCP
          port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgadmin-finance-tracker-egress
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/instance: postgres
spec:
  podSelector:
    matchLabels:
      postgres-operator.crunchydata.com/pgadmin: pgadmin
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: finance-tracker
          podSelector:
            matchLabels:
              cnpg.io/cluster: finance
      ports:
        - protocol: TCP
          port: 5432
